[package]
name = "tuber"
version = "0.1.0"
authors = ["m1cl <michael_ajala@yahoo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[features] <-- might be important for svgs 
#canvas = []

[dependencies]
iced = {features = ["glow", "svg", "debug", "async-std", "image"]}
tokio = {version = "0.2", features = ["full"]}
iced_futures = "0.2.0"
iced_native = "0.3.0"
yup-oauth2 = "5.0.1"
futures-util = "0.3.8"
youtube_dl = "0.6.0"
ureq = {version = "2.0.0", features = ["json", "charset"]  }
scraper = "0.12.0"
web-view = "0.7.2"
vgtk = "0.3.0"
